yiltc-go-backup/testsuite/negative/unknown_module.yilt
// Test importing a module that doesn't exist
use nonexistent_module

fn main()
    print(1)
